# bank_sms

./: README.md  commands  commands.txt  pyproject.toml  test.json
src/: functions.py  j_foo.py  main.py
tests/: test_function.py  test_j_foo.py
